# HandMadeGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile  output.txt  test.cpp
MacAppPack/: info.plist
app_packing/: appicon.rc  icon-windowed.icns
assets/: character_animation.yaml  level.txt
assets/shaders/: 3d_depth.vert  3d_mesh.frag  3d_mesh.vert  billboard.vert  bloom_composite.frag  bloom_filter.frag  cubemap.vert  difference_of_gaussian_composite.frag  gamma_correction.frag  horizontal_blur.frag  image.frag  image.vert  particle.frag  particle.vert  particle_instance.frag  particle_instance.vert  point_light.frag  point_light.vert  pure_texture.frag  screen_pos.vert  shader_registry.yaml  split_texture.frag  test.frag  test.vert  vertical_blur.frag
assets/shaders/2d/: image.frag
assets/shaders/3d/: lit_default.frag
assets/shaders/base/: camera_data.glsl  light_data.glsl  time_data.glsl  voronoi.glsl
assets/shaders/postprocess/: difference_of_gaussian_composite.frag  lookup_table.frag  order_dithering.frag  pure_texture.frag  split_texture.frag
include/glad/: glad.h
shaders/: image.vert  test.vert
src/: CMakeLists.txt  bloom_test.cpp  bloom_test.h  camera.cpp  camera.h  component.h  debug_macro.h  error_handler.cpp  error_handler.h  expandable_array.h  file_utils.cpp  file_utils.h  font_loader.h  glad.c  image.cpp  image.h  input_handle.cpp  input_handle.h  iserializable.h  light_manager.cpp  light_manager.h  main.cpp  node.cpp  node.h  platform.h  quad.cpp  quad.h  quaternion.h  random.cpp  random.h  serializer.cpp  serializer.h  shader.cpp  shader.h  skybox.cpp  test_serialization.cpp  triangle.cpp  triangle.h  vector.cpp  vector.h  (+4 more)
src/components/: character2d.cpp  character2d.h  component.cpp  component.h  drawable_interface.h  first_person_free_control_camera.cpp  first_person_free_control_camera.h  mesh_renderer.cpp  mesh_renderer.h  movement.cpp  movement.h  particle_system.cpp  particle_system.h  quad.cpp  quad.h  rotate.cpp  rotate.h  scaling.h  simple_particle_system.cpp  simple_particle_system.h  sprite_animation.cpp  sprite_animation.h  triangle.cpp  triangle.h
src/components/particle/: particle_lifetime_change.cpp  particle_lifetime_change.h  particle_spawn.cpp  particle_spawn.h  particle_system.cpp  particle_system.h  simple_particle_system.cpp  simple_particle_system.h
src/draw/: drawable_interface.h  image.cpp  image.h  material.h  quad.cpp  quad.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  triangle.cpp  triangle.h  vertex.h
src/editor/: CMakeLists.txt  camera_inspector.cpp  camera_inspector.h  editor.h  editor_window.h  hierarchy_view.cpp  hierarchy_view.h  node_inspector.cpp  node_inspector.h  post_process_inspector.cpp  post_process_inspector.h
src/engine/: CMakeLists.txt
src/engine/components/: CMakeLists.txt  component.cpp  component.h
src/engine/components/input/: CMakeLists.txt  first_person_free_control_camera.cpp  first_person_free_control_camera.h
src/engine/components/particle/: CMakeLists.txt  particle_system.cpp  particle_system.h  simple_particle_system.cpp  simple_particle_system.h
src/engine/components/render/: CMakeLists.txt  character2d.cpp  character2d.h  mesh_renderer.cpp  mesh_renderer.h  quad.cpp  quad.h  sprite_animation.cpp  sprite_animation.h  triangle.cpp  triangle.h
src/engine/components/transform/: CMakeLists.txt  movement.cpp  movement.h  rotate.cpp  rotate.h  scaling.h
src/engine/core/: CMakeLists.txt  camera.cpp  camera.h  debug_macro.h  engine_event_dispatcher.h  error_handler.cpp  error_handler.h  time.cpp  time.h  window.cpp  window.h
src/engine/core/input/: CMakeLists.txt  event.h  input_handle.cpp  input_manager.cpp  input_manager.h  keycode.h
src/engine/core/math/: CMakeLists.txt  quaternion.h  random.cpp  vector.cpp  vector.h
src/engine/core/scene/: CMakeLists.txt  node.cpp  node.h  world.cpp  world.h
src/engine/core/serialization/: CMakeLists.txt  iserializable.h  serializer.cpp  serializer.h  type_registry.cpp
src/engine/misc/: CMakeLists.txt  preference.h
src/engine/physics/: CMakeLists.txt  aabb.h  box.h
src/engine/render/: CMakeLists.txt  image.cpp  image.h  image_loader.cpp  image_loader.h  material.cpp  material.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  skybox.cpp  skybox.h  vertex.h
src/engine/render/lighting/: CMakeLists.txt  direction_light.cpp  direction_light.h  light_data.h  light_manager.cpp  light_manager.h  point_light.cpp  point_light.h
src/engine/render/models/: CMakeLists.txt  assimp_model_reader.cpp  assimp_model_reader.h  mesh.cpp  mesh.h  simple_obj_reader.cpp  simple_obj_reader.h
src/engine/render/post_process/: CMakeLists.txt  bloom_test.cpp  bloom_test.h  difference_of_gaussian.cpp  difference_of_gaussian.h  gamma_correction.cpp  gamma_correction.h  order_dithering.cpp  order_dithering.h  render_process_queue.cpp  render_process_queue.h
src/game/: CMakeLists.txt
src/game/colorpicker/: CMakeLists.txt  picker.cpp  picker.h
src/game/pingpong/: CMakeLists.txt  game.cpp  game.h  paddle_control.cpp  paddle_control.h  pong.cpp  pong.h
src/game/testing/: CMakeLists.txt  test.cpp  test.h
src/lighting/: direction_light.cpp  light_manager.cpp  light_manager.h  point_light.cpp  point_light.h
src/models/: assimp_model_reader.cpp  assimp_model_reader.h  mesh.cpp  mesh.h  simple_obj_reader.cpp  simple_obj_reader.h
src/physics/: aabb.h  box.h
src/post_process/: bloom_test.cpp  bloom_test.h  difference_of_gaussian.cpp  difference_of_gaussian.h  order_dithering.cpp  order_dithering.h  render_process_queue.cpp  render_process_queue.h
src/serialization/: serializer.cpp  serializer.h  type_registry.h
src/utils/: CMakeLists.txt  expandable_array.h  file_utils.cpp  file_utils.h  file_watch_dog.cpp  file_watch_dog.h  filesystem.h  player_preference.cpp  player_preference.h  string_handle.h
utilites/: README.md  check_error.py  check_gpp.cpp  count_code.py  font_atlas.json  general.py  generate_sub_cmake.py  make_font_atlas.py  noise_generator.py  test.cpp
